local storage -true

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-  <link rel="stylesheet" href="./bootstrap.min.css">
+  <link rel="stylesheet" href="./css/bootstrap.min.css">
 </head>
 <body class="bg-secondary">
   <div class="task-manager">
     <div class="container">
-      <div class="card mt-5 p-3 text-center col-md-7 mx-auto">
+      <div class="card mt-5 p-3 text-center col-lg-7 col-md-11 d-none d-sm-block + mx-auto">
         <h6 class="display-6">Task manager</h6>
         <input type="text" class="form-control" id="addInput" placeholder="Add task ">
         <div class="addTaskBtn text-start mt-3">
@@ -27,8 +27,8 @@
             <tr>
               <th class="col-md-1 col-sm-1"></th>
               <th class="col-md-5 col-sm-7">Task </th>
-              <th class="col-md-2 d-md-flex d-sm-none">Date</th>
-              <th class="col-md-4 col-sm-4">Edit & Delete</th>
+              <th class="col-md-2">Date</th>
+              <th class="col-md-3 col-sm-4">Edit & Delete</th>
             </table>
             </tr>
           <div id="table-display">
